Tweak ol spacing and fix list

--- a/docs/.vuepress/styles/index.styl
+++ b/docs/.vuepress/styles/index.styl
@@ -60,6 +60,9 @@ img.logo{
   content: counter(my-awesome-counter) ". ";
   color: $accentColor;
   font-weight: bold;
+  display: inline-block;
+  width: 1em;
+  margin-left: -1em;
 }
 
 .content__default ul {
